--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: medicine_app
 description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' 
 version: 1.0.0+1
 
 environment:
@@ -25,6 +25,7 @@ dependencies:
   shared_preferences: null
   numberpicker: ^2.1.1
   vibration: ^1.7.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
