--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ if (localPropertiesFile.exists()) {
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -24,11 +24,15 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-  def keystoreProperties = new Properties()
-   def keystorePropertiesFile = rootProject.file('key.properties')
-   if (keystorePropertiesFile.exists()) {
-       keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+   def keyProperties = new Properties()
+   def keyPropertiesFile = rootProject.file('key.properties')
+   if (keyPropertiesFile.exists()) {
+    
+       keyProperties.load(new FileInputStream(keyPropertiesFile))
    }
+
+
+
 
    android {
     compileSdkVersion 30
@@ -54,17 +58,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
-  signingConfigs {
-       release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-           storePassword keystoreProperties['storePassword']
-       }
-   }
-    buildTypes {
+ buildTypes {
         release {
-
             minifyEnabled true
             shrinkResources true// to shrink your image resource read more at https://developer.android.com/studio/build/shrink-code
             useProguard true// enables progaurd
@@ -73,6 +68,15 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
             // signingConfig signingConfigs.debug//release uytgetmeli
         }
     }
+     signingConfigs {
+       release {
+           keyAlias keyProperties['keyAlias']
+           keyPassword keyProperties['keyPassword']
+           storeFile keyProperties['storeFile'] ? file(keyProperties['storeFile']) : null
+           storePassword keyProperties['storePassword']
+       }
+   }
+    
 }
 
 flutter {
