--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: medicine_app
 description: A new Flutter project.
-publish_to: 'none' 
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cached_network_image: ^3.1.0
+  change_app_package_name: ^1.0.0
   connectivity: ^3.0.6
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.0
@@ -18,18 +19,18 @@ dependencies:
   flutter_svg: null
   http: null
   lint: ^1.7.2
+  numberpicker: ^2.1.1
   path_provider: null
   photo_view: ^0.12.0
   provider: null
   pull_to_refresh: ^2.0.0
   shared_preferences: null
-  numberpicker: ^2.1.1
   vibration: ^1.7.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
+
 flutter:
   uses-material-design: true
   generate: true
@@ -42,7 +43,7 @@ flutter:
 
   fonts:
     - family: Poppins_Bold
-      fonts: 
+      fonts:
         - asset: assets/fonts/Poppins-Bold.ttf
     - family: Poppins_SemiBold
       fonts:
