add some fuctions

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,17 +58,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
- buildTypes {
-        release {
-            minifyEnabled true
-            shrinkResources true// to shrink your image resource read more at https://developer.android.com/studio/build/shrink-code
-            useProguard true// enables progaurd
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.debug
-            // signingConfig signingConfigs.debug//release uytgetmeli
-        }
-    }
-     signingConfigs {
+      signingConfigs {
        release {
            keyAlias keyProperties['keyAlias']
            keyPassword keyProperties['keyPassword']
@@ -76,6 +66,16 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
            storePassword keyProperties['storePassword']
        }
    }
+ buildTypes {
+        release {
+            minifyEnabled true
+            shrinkResources true// to shrink your image resource read more at https://developer.android.com/studio/build/shrink-code
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+            // signingConfig signingConfigs.debug//release uytgetmeli
+        }
+    }
+   
     
 }
 
