--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,8 @@ environment:
 
 dependencies:
   cached_network_image: ^3.1.0
-  change_app_package_name: ^1.0.0
   connectivity: ^3.0.6
   cupertino_icons: ^1.0.2
-  easy_localization: ^3.0.0
   flutter:
     sdk: flutter
   flutter_iconly: ^1.0.2
@@ -19,13 +17,13 @@ dependencies:
   flutter_svg: null
   http: null
   lint: ^1.7.2
-  numberpicker: ^2.1.1
   path_provider: null
   photo_view: ^0.12.0
   provider: null
   pull_to_refresh: ^2.0.0
   shared_preferences: null
   vibration: ^1.7.3
+  get:
 
 dev_dependencies:
   flutter_test:
@@ -38,8 +36,6 @@ flutter:
     - assets/images/diller/
     - assets/images/
     - assets/icons/
-    - assets/language/ru-RU.json
-    - assets/language/en-US.json
 
   fonts:
     - family: Poppins_Bold
