Last Commit Chnaged Port

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.medicine_app">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="Nurana Bedew Pharmacy"
+        android:label="Dermanlar"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
